--- a/aula-11.ipynb
+++ b/aula-11.ipynb
@@ -329,13 +329,24 @@
     "\n",
     "int numeros[3][3];\n",
     "\n",
-    "for(int i=0;i<3;i++)\n",
-    "    for(int j=0;j<3;j++)\n",
+    "for(int i=0;i<3;i++) {\n",
+    "    for(int j=0;j<3;j++) {\n",
     "        numeros[i][j] = rand()%100;\n",
+    "        std::cout << numeros[i][j] << \" \";\n",
+    "    }\n",
+    "    std::cout << std::endl;\n",
+    "}\n",
     "  \n",
     "for(int i=0;i<3;i++) \n",
     "    std::cout << numeros[i][i] << std::endl;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -351,10 +362,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bool haVencedor(int matriz[3][3]){\n",
+    "    // testa se há vencedor nas linhas\n",
+    "    for(int i=0; i < 3; i++){\n",
+    "        if (matriz[i][0] == matriz[i][1] && \n",
+    "            matriz[i][1] == matriz[i][2] && \n",
+    "            matriz[i][1] != -1)\n",
+    "                return true;\n",
+    "    }\n",
+    "    // testa se há vencedor nas colunas\n",
+    "    for(int j=0; j < 3; j++){\n",
+    "        if (matriz[0][j] == matriz[1][j] && \n",
+    "            matriz[1][j] == matriz[2][j] && \n",
+    "            matriz[1][j] != -1)\n",
+    "                return true;\n",
+    "    }\n",
+    "    // testa se há vencedor na diagonal principal\n",
+    "    if (matriz[0][0] == matriz[1][1] && \n",
+    "        matriz[1][1] == matriz[2][2] && \n",
+    "        matriz[1][1] != -1)\n",
+    "        return true;\n",
+    "    // testa se há vencedor na diagonal secundária\n",
+    "    if (matriz[0][2] == matriz[1][1] && \n",
+    "        matriz[1][1] == matriz[2][0] && \n",
+    "        matriz[1][1] != -1)\n",
+    "        return true;\n",
+    "    return false;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 0 \n",
+      "1 0 -1 \n",
+      "0 1 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "#include<iostream>\n",
+    "#include<cstdlib>\n",
+    "#include<time.h>\n",
+    "\n",
+    "srand( (unsigned) time(NULL) );\n",
+    "\n",
+    "int matriz[3][3];\n",
+    "\n",
+    "for(int i=0; i<3; i++)\n",
+    "    for(int j=0; j<3; j++)\n",
+    "        matriz[i][j] = -1;\n",
+    "\n",
+    "int i, j;\n",
+    "while(!haVencedor(matriz))\n",
+    "{\n",
+    "    // primeiro jogador O\n",
+    "    do {\n",
+    "        i = rand()%3;\n",
+    "        j = rand()%3;\n",
+    "    } while(matriz[i][j] != -1);\n",
+    "    matriz[i][j] = 0;\n",
+    "    \n",
+    "    // segundo jogador X\n",
+    "    do {\n",
+    "        i = rand()%3;\n",
+    "        j = rand()%3;\n",
+    "    } while(matriz[i][j] != -1);\n",
+    "    matriz[i][j] = 1;\n",
+    "}\n",
+    "\n",
+    "for(int i=0;i<3;i++) {\n",
+    "    for(int j=0;j<3;j++) {\n",
+    "        std::cout << matriz[i][j] << \" \";\n",
+    "    }\n",
+    "    std::cout << std::endl;\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
