--- a/aula-11.ipynb
+++ b/aula-11.ipynb
@@ -366,32 +366,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bool haVencedor(int matriz[3][3]){\n",
+    "int vencedor(int matriz[3][3]){\n",
     "    // testa se há vencedor nas linhas\n",
     "    for(int i=0; i < 3; i++){\n",
     "        if (matriz[i][0] == matriz[i][1] && \n",
     "            matriz[i][1] == matriz[i][2] && \n",
     "            matriz[i][1] != -1)\n",
-    "                return true;\n",
+    "                return matriz[i][1];\n",
     "    }\n",
     "    // testa se há vencedor nas colunas\n",
     "    for(int j=0; j < 3; j++){\n",
     "        if (matriz[0][j] == matriz[1][j] && \n",
     "            matriz[1][j] == matriz[2][j] && \n",
     "            matriz[1][j] != -1)\n",
-    "                return true;\n",
+    "                return matriz[1][j];\n",
     "    }\n",
     "    // testa se há vencedor na diagonal principal\n",
     "    if (matriz[0][0] == matriz[1][1] && \n",
     "        matriz[1][1] == matriz[2][2] && \n",
     "        matriz[1][1] != -1)\n",
-    "        return true;\n",
+    "        return matriz[1][1];\n",
     "    // testa se há vencedor na diagonal secundária\n",
     "    if (matriz[0][2] == matriz[1][1] && \n",
     "        matriz[1][1] == matriz[2][0] && \n",
     "        matriz[1][1] != -1)\n",
-    "        return true;\n",
-    "    return false;\n",
+    "        return matriz[1][1];\n",
+    "    return -1;\n",
     "}"
    ]
   },
@@ -404,9 +404,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1 0 \n",
-      "1 0 -1 \n",
-      "0 1 0 \n"
+      "0 1 1 \n",
+      "0 0 1 \n",
+      "0 1 -1 \n",
+      "vencedor: 0"
      ]
     }
    ],
@@ -424,7 +425,7 @@
     "        matriz[i][j] = -1;\n",
     "\n",
     "int i, j;\n",
-    "while(!haVencedor(matriz))\n",
+    "while(vencedor(matriz) == -1)\n",
     "{\n",
     "    // primeiro jogador O\n",
     "    do {\n",
@@ -432,7 +433,7 @@
     "        j = rand()%3;\n",
     "    } while(matriz[i][j] != -1);\n",
     "    matriz[i][j] = 0;\n",
-    "    \n",
+    "\n",
     "    // segundo jogador X\n",
     "    do {\n",
     "        i = rand()%3;\n",
@@ -446,7 +447,9 @@
     "        std::cout << matriz[i][j] << \" \";\n",
     "    }\n",
     "    std::cout << std::endl;\n",
-    "}"
+    "}\n",
+    "\n",
+    "std::cout << \"vencedor: \" << vencedor(matriz);"
    ]
   },
   {
