--- a/aula-13.ipynb
+++ b/aula-13.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,11 +123,31 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No documentation found for std::ifstream\n"
-     ]
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "            #pager-container {\n",
+       "                padding: 0;\n",
+       "                margin: 0;\n",
+       "                width: 100%;\n",
+       "                height: 100%;\n",
+       "            }\n",
+       "            .xcpp-iframe-pager {\n",
+       "                padding: 0;\n",
+       "                margin: 0;\n",
+       "                width: 100%;\n",
+       "                height: 100%;\n",
+       "                border: none;\n",
+       "            }\n",
+       "            </style>\n",
+       "            <iframe class=\"xcpp-iframe-pager\" src=\"https://en.cppreference.com/w/cpp/io/basic_ifstream?action=purge\"></iframe>"
+      ],
+      "text/plain": [
+       "https://en.cppreference.com/w/cpp/io/basic_ifstream"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -164,6 +184,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "char ola[10];\n",
+    "pontos >> ola;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá"
+     ]
+    }
+   ],
+   "source": [
+    "std::cout << ola;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "char mundo[10];\n",
+    "pontos >> mundo;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mundo!"
+     ]
+    }
+   ],
+   "source": [
+    "std::cout << mundo;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -172,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +258,9 @@
     }
    ],
    "source": [
-    "std::ofstream pessoas (\"pessoas.txt\");\n",
+    "std::ofstream pessoas;\n",
+    "\n",
+    "pessoas.open(\"pessoas.txt\");\n",
     "\n",
     "if (pessoas.is_open())\n",
     "    std::cout << \"Criou\";\n",
@@ -194,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -237,15 +313,17 @@
      "output_type": "stream",
      "text": [
       "João 22\n",
-      "Maria 20\n",
       "Maria 20\n"
      ]
     }
    ],
    "source": [
-    "std::ifstream leitura(\"pessoas.txt\");\n",
+    "std::ifstream leitura;\n",
     "std::string nome;\n",
     "int idade;\n",
+    "\n",
+    "leitura.open(\"pessoas.txt\");\n",
+    "\n",
     "while (!leitura.eof()){\n",
     "    leitura >> nome;\n",
     "    leitura >> idade;\n",
@@ -267,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -275,15 +353,16 @@
      "output_type": "stream",
      "text": [
       "João Roberto\n",
-      "Maria Antonieta\n",
-      "\n"
+      "Maria Antonieta\n"
      ]
     }
    ],
    "source": [
-    "std::ifstream leitura2(\"pessoas.txt\");\n",
-    "\n",
+    "std::ifstream leitura2;\n",
     "std::string nomeCompleto;\n",
+    "\n",
+    "leitura2.open(\"pessoas.txt\");\n",
+    "\n",
     "while (!leitura2.eof()){\n",
     "    std::getline(leitura2, nomeCompleto);\n",
     "    std::cout << nomeCompleto << std::endl;\n",
@@ -306,6 +385,195 @@
     "- void grava_func ( TFuncionario f, FILE * arqtex );\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include <stdio.h>\n",
+    "#include <iostream>\n",
+    "#include <fstream>\n",
+    "\n",
+    "typedef struct {\n",
+    "    std::string nome;\n",
+    "    char sexo ;\n",
+    "    int idade ;\n",
+    "    int matricula ;\n",
+    "    float salario ;\n",
+    "} TFuncionario ;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TFuncionario invalida_func ( void )\n",
+    "{\n",
+    "    TFuncionario f;\n",
+    "    f.matricula = -1;\n",
+    "    return (f);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TFuncionario inicializa_func ( void )\n",
+    "{\n",
+    "    TFuncionario f;\n",
+    "    f.matricula = 0;\n",
+    "    return (f);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TFuncionario le_func ( std::ifstream & arq )\n",
+    "{\n",
+    "    TFuncionario f = invalida_func ();\n",
+    "\n",
+    "    if ( arq.is_open() ) {\n",
+    "        arq >> f.sexo >> f.idade >> f.matricula >> f.salario;\n",
+    "        std::getline(arq, f.nome);\n",
+    "    }\n",
+    "    \n",
+    "    return (f);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bool func_valido ( TFuncionario f)\n",
+    "{\n",
+    "    return (f.matricula >= 0);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "void grava_func ( TFuncionario f, std::ofstream & arq )\n",
+    "{\n",
+    "    arq << f.sexo << \" \" \n",
+    "        << f.idade << \" \" \n",
+    "        << f.matricula << \" \" \n",
+    "        << f.salario << \" \" \n",
+    "        << f.nome;\n",
+    "    arq << std::endl;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abriu!\n"
+     ]
+    }
+   ],
+   "source": [
+    "std::ofstream arquivo;\n",
+    "\n",
+    "arquivo.open(\"func.txt\");\n",
+    "\n",
+    "if (arquivo.is_open())\n",
+    "    std::cout << \"abriu!\" << std::endl;\n",
+    "else\n",
+    "    std::cout << \"erro!\" << std::endl;\n",
+    "\n",
+    "for(int matricula = 0; matricula < 100; matricula++)\n",
+    "{\n",
+    "    TFuncionario f = inicializa_func ();\n",
+    "    f.matricula = matricula;\n",
+    "    f.idade = 20 + rand()%3;\n",
+    "    f.salario = 1000 + rand()%4000;\n",
+    "    f.sexo = (rand()%2 ? 'M' : 'F');\n",
+    "    f.nome = \"Nome \" + std::to_string(matricula+1);\n",
+    "    \n",
+    "    if (func_valido(f))\n",
+    "    {\n",
+    "        grava_func(f, arquivo);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "arquivo.close();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abriu!\n"
+     ]
+    }
+   ],
+   "source": [
+    "std::ifstream leitura;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abriu!\n"
+     ]
+    }
+   ],
+   "source": [
+    "leitura.open(\"func.txt\");\n",
+    "\n",
+    "if (leitura.is_open())\n",
+    "    std::cout << \"abriu!\" << std::endl;\n",
+    "else\n",
+    "    std::cout << \"erro!\" << std::endl;\n",
+    "\n",
+    "arquivo.open(\"func1.txt\");\n",
+    "\n",
+    "while (!leitura.eof()) {\n",
+    "    TFuncionario f = le_func(leitura);\n",
+    "    if (func_valido(f))\n",
+    "    {\n",
+    "        f.salario += 1000;\n",
+    "        grava_func(f, arquivo);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "arquivo.close();\n",
+    "leitura.close();"
    ]
   },
   {
