--- a/aula-02.ipynb
+++ b/aula-02.ipynb
@@ -62,58 +62,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1minput_line_13:2:8: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mredefinition of 'a'\u001b[0m\n",
-      " float a; // Coeficiente angular\n",
-      "\u001b[0;1;32m       ^\n",
-      "\u001b[0m\u001b[1minput_line_10:2:8: \u001b[0m\u001b[0;1;30mnote: \u001b[0mprevious definition is here\u001b[0m\n",
-      " float a; // Coeficiente angular\n",
-      "\u001b[0;1;32m       ^\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "/* \n",
     " Cálculo das raízes reais de uma equação do segundo grau \n",
     " Descrição: programa que calcula as raízes reais de uma equação do segundo grau.\n",
     " Dados de entrada: os coeficientes a, b e c de uma equação da forma ax^2 + bx + c = 0\n",
     " Saída do programa: raízes reais da equação\n",
-    "*/\n",
+    "*/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "double a; // Coeficiente angular\n",
+    "double b; // Coeficiente linear\n",
+    "double c; // Termo independente\n",
     "\n",
-    "#include<iostream>\n",
-    "\n",
-    "float a; // Coeficiente angular\n",
-    "float b; // Coeficiente linear\n",
-    "float c; // Termo independente\n",
-    "\n",
-    "float delta; // Discriminante\n",
-    "float raiz1; // Primeira raiz\n",
-    "float raiz2; // Segunda raiz\n",
-    "\n",
+    "double delta; // Discriminante\n",
+    "double x1; // Primeira raiz\n",
+    "double x2; // Segunda raiz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "// Leitura dos coeficientes\n",
-    "a = 10.0; b = 5.0; c = 0.0;\n",
-    "\n",
+    "a = 10.0; b = 5.0; c = 0.0;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "// Cálculo do discriminante (delta)\n",
-    "delta = b * b - 4 * a * c;\n",
+    "delta = b * b - 4 * a * c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Cálculo da primeira raiz\n",
+    "x1 = (-b + sqrt(delta)) / (2.0*a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Cálculo da segunda raiz\n",
+    "x2 = (-b - sqrt(delta)) / (2.0*a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instruções de entrada de dados\n",
     "\n",
-    "// Cálculo das raízes\n",
-    "if (delta < 0.0)\n",
-    "{\n",
-    "    std::cout << \"A equação não possui raízes reais.\";\n",
-    "}\n",
-    "else\n",
-    "{\n",
-    "    raiz1 = (-b + sqrt(delta)) / (2.0*a);\n",
-    "    raiz2 = (-b - sqrt(delta)) / (2.0*a);\n",
-    "    std::cout << \"As raízes da equação são: \" << raiz1 << \" e \" << raiz2;\n",
-    "}"
+    "Exercício 1: Escreva um programa C para o usuário informar os valores para os coeficientes \"a\", \"b\" e \"c\" sem precisar modificar o programa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include <iostream>\n",
+    "using namespace std;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cin >> a;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cin >> b;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cin >> c;"
    ]
   },
   {
@@ -160,25 +219,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4/2*5+1=11\n",
-      "4/2*(5+1)=12\n"
-     ]
-    }
-   ],
    "source": [
-    "// Os parênteses alteram a ordem de avaliação\n",
+    "### Os parênteses alteram a ordem de avaliação\n",
     "\n",
-    "// Exemplo:\n",
-    "std::cout << \"4/2*5+1=\" << 4/2*5+1 << std::endl;\n",
-    "std::cout << \"4/2*(5+1)=\" << 4/2*(5+1) << std::endl;\n"
+    "    Exemplo: 4/2*5+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4/2*5+1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Exemplo: 4/2*(5+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4/2*(5+1)"
    ]
   },
   {
@@ -197,10 +268,10 @@
    "outputs": [],
    "source": [
     "#include <iostream>\n",
-    "\n",
+    "using namespace std;\n",
     "/* Exibir uma mensagem */\n",
     "\n",
-    "std::cout << \"Olá, mundo!\" << std::endl;"
+    "cout << \"Olá, mundo!\" << endl;"
    ]
   },
   {
@@ -224,27 +295,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Instituto Federal do Espirito Santo\n",
-      "Curso de Engenharia Mecanica\n",
-      " Alunos \t \t Notas \n",
-      " A \t \t \t 8 \n",
-      " B \t \t \t 5.5 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "std::cout << \"Instituto Federal do Espirito Santo\\n\";\n",
-    "std::cout << \"Curso de Engenharia Mecanica\\n\";\n",
-    "std::cout << \" Alunos \\t \\t Notas \\n\";\n",
-    "std::cout << \" A \\t \\t \\t 8 \\n\";\n",
-    "std::cout << \" B \\t \\t \\t 5.5 \\n\";"
+    "cout << \"Instituto Federal do Espirito Santo\\n\";\n",
+    "cout << \"Curso de Engenharia Mecanica\\n\";\n",
+    "cout << \" Alunos \\t \\t Notas \\n\";\n",
+    "cout << \" A \\t \\t \\t 8 \\n\";\n",
+    "cout << \" B \\t \\t \\t 5.5 \\n\";"
    ]
   },
   {
@@ -269,18 +328,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "xeus C++14",
-   "language": "",
-   "name": "xeus-cling-cpp14"
+   "display_name": "C++14",
+   "language": "C++14",
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
    "file_extension": ".cpp",
    "mimetype": "text/x-c++src",
    "name": "c++",
-   "version": ""
+   "version": "14"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
