--- a/aula-03.ipynb
+++ b/aula-03.ipynb
@@ -329,18 +329,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "xeus C++14",
-   "language": "",
-   "name": "xeus-cling-cpp14"
+   "display_name": "C++14",
+   "language": "C++14",
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
    "file_extension": ".cpp",
    "mimetype": "text/x-c++src",
    "name": "c++",
-   "version": ""
+   "version": "14"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
