--- a/index.ipynb
+++ b/index.ipynb
@@ -13,7 +13,7 @@
     "| 20/02| Introdução à programação: Apresentação da linguagem c/c++ | Histórico de Computação (slides) |\n",
     "| 25/02| Feriado de Carnaval ||\n",
     "| 27/02| Introdução à programação: Apresentação da linguagem c/c++ | [Introdução à linguagem C](aula-02.ipynb)\n",
-    "| 27/02| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | Resolução de equações matemáticas em computadores |\n",
+    "| 27/02| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | [Resolução de equações em C](aula-01.ipynb) |\n",
     "| 03/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | Representação numérica em computadores |\n",
     "| 05/03| Ambiente de programação: Descrição do ambiente e sua particularidades; Aplicação do ambiente | TinkerCad |\n",
     "| 10/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | Variáveis e Ponteiros |\n",
