--- a/index.ipynb
+++ b/index.ipynb
@@ -14,9 +14,9 @@
     "| 25/02| Feriado de Carnaval ||\n",
     "| 27/02| Introdução à programação: Apresentação da linguagem c/c++ | [Introdução à linguagem C](aula-02.ipynb)\n",
     "| 27/02| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | [Resolução de equações em C](aula-01.ipynb) |\n",
-    "| 03/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | Representação numérica em computadores |\n",
-    "| 05/03| Ambiente de programação: Descrição do ambiente e sua particularidades; Aplicação do ambiente | TinkerCad |\n",
-    "| 10/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | Variáveis e Ponteiros |\n",
+    "| 03/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | [Representação numérica em computadores](aula-04.1.ipynb) |\n",
+    "| 05/03| Ambiente de programação: Descrição do ambiente e sua particularidades; Aplicação do ambiente | [TinkerCad](https://www.tinkercad.com) |\n",
+    "| 10/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | [Variáveis](aula-03.ipynb) e [Ponteiros](aula-04.ipynb) |\n",
     "| 10/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | Aula prática: controlando o temporizador de um semáforo com LED e arduino |\n",
     "| 12/03| PROVA 1 ||\n",
     "| 17/03| Ambiente de programação: Descrição do ambiente e sua particularidades; Aplicação do ambiente. |Jupyter Notebook |\n",
