--- a/aula-03.ipynb
+++ b/aula-03.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,11 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "void f1()\n",
+    "//f1\n",
     "{\n",
     "    // declaração de variáveis locais a função f1\n",
     "    int v2;\n",
@@ -88,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "int main()\n",
+    "//main\n",
     "{\n",
     "    // declaração de variáveis locais a função main\n",
     "    int v1, v2;\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,23 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1minput_line_13:2:4: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mcannot assign to variable 'a' with const-qualified type 'const int'\u001b[0m\n",
-      " a = 20; // ERRO!!!\n",
-      "\u001b[0;1;32m ~ ^\n",
-      "\u001b[0m\u001b[1minput_line_12:2:12: \u001b[0m\u001b[0;1;30mnote: \u001b[0mvariable 'a' declared const here\u001b[0m\n",
-      " const int a=10; \n",
-      "\u001b[0;1;32m ~~~~~~~~~~^~~~\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 20; // ERRO!!!"
    ]
@@ -184,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,17 +239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "563"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#include<iostream>\n",
     "\n",
@@ -279,17 +257,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Média : 27.6667"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "float n1, n2, n3, media;\n",
     "// Primeiro número:\n",
