--- a/index.ipynb
+++ b/index.ipynb
@@ -15,11 +15,10 @@
     "| 27/02| Introdução à programação: Apresentação da linguagem c/c++ | [Introdução à linguagem C](aula-02.ipynb)\n",
     "| 27/02| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | [Resolução de equações em C](aula-01.ipynb) |\n",
     "| 03/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | [Representação numérica em computadores](aula-04.1.ipynb) |\n",
-    "| 05/03| Ambiente de programação: Descrição do ambiente e sua particularidades; Aplicação do ambiente | [TinkerCad](https://www.tinkercad.com) |\n",
-    "| 10/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | [Variáveis](aula-03.ipynb) e [Ponteiros](aula-04.ipynb) |\n",
-    "| 10/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | Aula prática: controlando o temporizador de um semáforo com LED e arduino |\n",
+    "| 05/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | [Variáveis](aula-03.ipynb) e [Ponteiros](aula-04.ipynb) |\n",
+    "| 10/03| Ambiente de programação: Descrição do ambiente e sua particularidades; Aplicação do ambiente | [TinkerCad](https://www.tinkercad.com) |\n",
     "| 12/03| PROVA 1 ||\n",
-    "| 17/03| Ambiente de programação: Descrição do ambiente e sua particularidades; Aplicação do ambiente. |Jupyter Notebook |\n",
+    "| 17/03| Definições: Algoritmo; Dados; Variáveis; Constantes; Tipos e declaração de dados; lógico, inteiro, real e caractere | Aula prática: controlando o temporizador de um semáforo com LED e arduino |\n",
     "| 19/03| Introdução a lógica: Operadores e expressões lógicas; Operadores e expressões aritméticas; Descrição e uso do comando: se-então-senão. | Introdução a Lógica Formal com exemplos em Prolog |\n",
     "| 24/03| Introdução a lógica: Operadores e expressões lógicas; Operadores e expressões aritméticas; Descrição e uso do comando: se-então-senão. | Operadores e Expressões relacionais e lógicas |\n",
     "| 26/03| Introdução a lógica: Operadores e expressões lógicas; Operadores e expressões aritméticas; Descrição e uso do comando: se-então-senão. | Estruturas de controle condicional |\n",
@@ -51,7 +50,13 @@
     "| 25/06| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; | \n",
     "| 30/06| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; | Aula prática 8 - controlando o ARABOT (carro + braço robótico) usando teleoperação com ROS |\n",
     "| 02/07| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; | \n",
-    "| 07/07| PROVA FINAL ||"
+    "| 07/07| PROVA FINAL ||\n",
+    "\n",
+    "## Listas de Exercícios\n",
+    "\n",
+    "| Listas |\n",
+    "| ---    |\n",
+    "| [Lista 1](lista-01.ipynb) |"
    ]
   },
   {
